--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "repository": "https://github.com/kajyr/nanof",
   "author": "Carlo 'kajyr' <carlo.panzi@gmail.com> (http://kajyr.github.io/)",
   "license": "MIT",
+  "scripts": {
+    "test": "node ./tests/*.js | tnyan"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.3"
+    "gulp-coffee": "^2.3.3",
+    "jsdom": "^11.0.0",
+    "tap-nyan": "^1.1.0",
+    "tape": "^4.6.3"
   }
 }
