--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanof",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "repository": "https://github.com/kajyr/nanof",
   "author": "Carlo 'kajyr' <carlo.panzi@gmail.com> (http://kajyr.github.io/)",
@@ -14,5 +14,8 @@
     "jsdom": "^11.0.0",
     "tap-nyan": "^1.1.0",
     "tape": "^4.6.3"
+  },
+  "dependencies": {
+    "release-it": "^2.8.2"
   }
 }
