--- a/package.json
+++ b/package.json
@@ -16,14 +16,11 @@
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version:patch && git push origin && git push origin --tags"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.3",
-    "jsdom": "^11.0.0",
+    "jsdom": "^13.2.0",
     "tap-nyan": "^1.1.0",
     "tape": "^4.6.3"
   },
   "dependencies": {
-    "generate-changelog": "^1.7.1",
-    "release-it": "^2.8.2"
+    "generate-changelog": "^1.7.1"
   }
 }
