build: Cleaned release scripts

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "license": "MIT",
   "scripts": {
     "test": "nyc ava --verbose",
+    "prechangelog": "yarn test",
     "changelog": "changelog",
+    "postchangelog": "git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' ",
     "version:major": "yarn version --major",
     "version:minor": "yarn version --minor",
     "version:patch": "yarn version --patch",
-    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version:major && git push origin && git push origin --tags",
-    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version:minor && git push origin && git push origin --tags",
-    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version:patch && git push origin && git push origin --tags"
+    "release:major": "yarn changelog -M && yarn version:major",
+    "release:minor": "yarn changelog -m && yarn version:minor",
+    "release:patch": "yarn changelog -p && yarn version:patch",
+    "postversion": "git push origin && git push origin --tags"
   },
   "devDependencies": {
     "ava": "^1.2.0",
